compiler/tests/compile-fail/reference-errors.rsp
(import [risp base])

(def _ nopenopenope)
      ;^^^^^^^^^^^^ ERROR unable to resolve symbol

(def _ String)
      ;^^^^^^ ERROR cannot take the value of a type

(def _ Listof)
      ;^^^^^^ ERROR cannot take the value of a type

(def _ ->!)
      ;^^^ ERROR cannot take the value of a type

(def _ fn)
      ;^^ ERROR cannot take the value of a primitive